--- a/deployment/k8s/charts/aggregates/migrationAssistantWithArgo/valuesEks.yaml
+++ b/deployment/k8s/charts/aggregates/migrationAssistantWithArgo/valuesEks.yaml
@@ -127,6 +127,18 @@ charts:
               key: STAGE_NAME
 
       config:
+        # Override inputs to include custom multi-line parsers
+        inputs: |
+          [INPUT]
+              Name               tail
+              Tag                kube.*
+              Path               /var/log/containers/*.log
+              multiline.parser   docker, cri, traffic_replayer_multiline, rfs_multiline
+              Refresh_Interval   5
+              Mem_Buf_Limit      100MB
+              Skip_Long_Lines    Off
+              Skip_Empty_Lines   On
+
         # Change output destination to be CloudWatch
         outputs: |
           [OUTPUT]
