Fix: handle missing serviceAccountName in Kyverno policy preconditions
The zero-resource-requests policy was failing when evaluating pods that
don't have serviceAccountName explicitly set. This adds a default empty
string fallback using JMESPath's || operator to prevent the 'Unknown key'
error.

Signed-off-by: Andre Kurait <akurait@amazon.com>

--- a/deployment/k8s/charts/aggregates/migrationAssistantWithArgo/templates/resources/kyvernoZeroResourceRequests.yaml
+++ b/deployment/k8s/charts/aggregates/migrationAssistantWithArgo/templates/resources/kyvernoZeroResourceRequests.yaml
@@ -27,7 +27,7 @@ data:
                     - Pod
           preconditions:
             any:
-              - key: "{{`{{ request.object.spec.serviceAccountName }}`}}" # Backticks escape Helm, inner braces are Kyverno JMESPath
+              - key: "{{`{{ request.object.spec.serviceAccountName || '' }}`}}" # Backticks escape Helm, inner braces are Kyverno JMESPath
                 operator: In
                 value:
                   - migration-console-access-role
@@ -57,7 +57,7 @@ data:
                     - Pod
           preconditions:
             all:
-              - key: "{{`{{ request.object.spec.serviceAccountName }}`}}"
+              - key: "{{`{{ request.object.spec.serviceAccountName || '' }}`}}"
                 operator: In
                 value:
                   - migration-console-access-role
