POC: Clean Pipeline IR approach for RFS refactor
Alternative to the physical module split approach. Defines a Lucene-agnostic
IR (DocumentChange, IndexMetadataSnapshot, ShardId, ProgressCursor) and
Source/Sink port interfaces that enable N+M testing without module restructuring.

Key components:
- ir/: Clean IR types with no Lucene dependencies
- source/DocumentSource: Reading port interface
- sink/DocumentSink: Writing port interface
- MigrationPipeline: Wires source→sink with batching
- adapter/LuceneAdapter: Bridges existing LuceneDocumentChange to clean IR
- SyntheticDocumentSource + CollectingDocumentSink: Test doubles for N+M testing

All 7 tests pass. The rfs-pipeline module only has a compileOnly dependency
on rfs-common (for the adapter), and the core IR types have zero external deps.

Signed-off-by: Andre Kurait <andrekurait@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -50,6 +50,7 @@ include 'jenkinsTests'
 include 'RFS'
 include 'rfs-common'
 include 'rfs-http'
+include 'rfs-pipeline'
 include 'SearchSnapshotExtractor'
 include 'SnapshotReader'
 include 'CreateSnapshot'
